--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header>
             <h1>Denoising of Lung Sound Recordings</h1>
             <p> WORK IN PROGRESS </p>
+            <p> Testing Deploy </p>
         </header>
 
         <main>
